Update css for the newly added header

--- a/sass/theme.sass
+++ b/sass/theme.sass
@@ -1,2 +1,22 @@
 body
-  background: #136
+  background-color: #bbb
+
+nav
+  float: right
+  margin: 20px 0 0
+  
+  ul
+    li
+      display: inline
+      list-style: none
+      margin: 0 20px
+
+      a
+        font-size: 20px
+        line-height: 40px
+        padding: 5px 10px
+        text-decoration: none
+        color: #555
+
+        &:hover
+          color #333
