--- a/monospark_sphinx_theme/static/style.css
+++ b/monospark_sphinx_theme/static/style.css
@@ -28,21 +28,56 @@ body {
   background: #e6e6e6 !important;
   margin-top: 89px !important; }
 
-section {
+main {
+  padding-left: 2em;
+  padding-right: 2em; }
+
+main, aside {
   background: #fff;
-  padding: 1em 2em 2em !important;
   margin-bottom: 1.2em;
   border-radius: 2px;
   box-shadow: 0px 3px 6px 0px rgba(50, 50, 50, 0.5); }
-  section h1 {
+  main h1, aside h1 {
     color: #3366cc !important;
     font-size: 34px !important;
     text-align: center; }
-  section hr {
+  main hr, aside hr {
     border-color: #3366cc !important;
     box-shadow: 0px 3px 6px 0px rgba(50, 50, 50, 0.35); }
-  section p {
+  main p, aside p {
     color: #1a1a1a; }
+
+#sidebar-wrapper {
+  padding-left: 0 !important;
+  padding-right: 0 !important; }
+
+aside {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.1em;
+  margin-left: 0;
+  margin-right: 0 !important;
+  line-height: 1.5em; }
+  aside h3 {
+    text-align: center; }
+  aside ul {
+    margin: 0;
+    padding: 0;
+    list-style: none !important; }
+  aside ul {
+    margin: 0 0 0 12px; }
+  aside li.current > a {
+    font-weight: bold; }
+  aside .toctree-l1.current {
+    display: list-item; }
+    aside .toctree-l1.current .toctree-l2 {
+      display: list-item; }
+  aside .toctree-l1 {
+    font-size: 17px; }
+  aside .toctree-l2 {
+    font-size: 15px; }
+  aside .toctree-l3 {
+    font-size: 13px; }
 
 footer {
   padding-top: 1.5em;
