--- a/sass/style.sass
+++ b/sass/style.sass
@@ -36,10 +36,13 @@ nav
 body 
   background: #e6e6e6 !important
   margin-top: 89px !important
-
-section 
+  
+main
+  padding-left: 2em
+  padding-right: 2em
+  
+main, aside
   background: #fff
-  padding: 1em 2em 2em !important
   margin-bottom: 1.2em
   border-radius: 2px
   box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.5)
@@ -56,7 +59,47 @@ section
   p 
     color: #1a1a1a
 
-    
+#sidebar-wrapper
+  padding-left: 0 !important
+  padding-right: 0 !important
+  
+aside
+  padding-left: 0
+  padding-right: 0
+  padding-top: 0.1em
+  margin-left: 0
+  margin-right: 0 !important
+  line-height: 1.5em
+  
+  h3
+    text-align: center
+  ul
+    margin: 0
+    padding: 0
+    list-style: none !important
+	
+  ul
+    margin: 0 0 0 12px
+	
+  li.current
+    &>a
+      font-weight: bold
+	  
+  .toctree-l1.current
+    display: list-item
+	
+    & .toctree-l2
+      display: list-item
+	 
+  .toctree-l1
+    font-size: 17px
+	
+  .toctree-l2
+    font-size: 15px
+	
+  .toctree-l3
+    font-size: 13px
+	
 footer
   padding-top: 1.5em
   border-top: 1px solid #dfdfdf
