--- a/sass/style.sass
+++ b/sass/style.sass
@@ -38,23 +38,24 @@ body
   margin-top: 89px !important
   
 main
+  background: #fff
   padding-left: 2em
   padding-right: 2em
+  box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.5)
+  
+  hr
+    border-color: #3366cc !important
+    box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.35)
   
 main, aside
-  background: #fff
+  overflow: hidden
   margin-bottom: 1.2em
   border-radius: 2px
-  box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.5)
 
   h1
     color: #3366cc !important
     font-size: 34px !important
     text-align: center
-  
-  hr
-    border-color: #3366cc !important
-    box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.35)
 
   p 
     color: #1a1a1a
@@ -63,42 +64,60 @@ main, aside
   padding-left: 0 !important
   padding-right: 0 !important
   
-aside
+aside	
+  background: #f2f2f2
   padding-left: 0
   padding-right: 0
-  padding-top: 0.1em
+  padding-top: 0
   margin-left: 0
   margin-right: 0 !important
-  line-height: 1.5em
+  box-shadow: 0px 3px 5px -2px rgba(50,50,50,0.5)
   
   h3
+    color: #3366cc !important
     text-align: center
+	
+  hr
+    border-color: #3366cc !important
+    box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.35)
+    margin: 0px 15px 25px !important
+	
   ul
     margin: 0
     padding: 0
     list-style: none !important
+    padding-left: 15px
 	
-  ul
-    margin: 0 0 0 12px
+  ul>li.toctree-l1
+    padding-bottom: 0.5em
 	
   li.current
     &>a
       font-weight: bold
-	  
-  .toctree-l1.current
-    display: list-item
-	
-    & .toctree-l2
-      display: list-item
 	 
   .toctree-l1
     font-size: 17px
+    line-height: 24px
 	
   .toctree-l2
     font-size: 15px
+    line-height: 23px
 	
   .toctree-l3
     font-size: 13px
+    line-height: 22px
+	
+  .toctree-l1 a
+    color: #1a1a1a !important
+	
+  a:hover
+    background: #e5e5e5 !important
+    border-radius: 2px
+    text-decoration: none !important
+	
+  a:focus
+    outline: none !important
+    text-decoration: none !important
 	
 footer
   padding-top: 1.5em
