--- a/sass/style.sass
+++ b/sass/style.sass
@@ -31,7 +31,7 @@ nav
   .fa-list-alt
     vertical-align: -5% !important
 
-/* Main Content */
+/* Main content */
 
 body 
   background: #e6e6e6 !important
@@ -63,6 +63,8 @@ main, aside
 #sidebar-wrapper
   padding-left: 0 !important
   padding-right: 0 !important
+
+/* Table of contents */  
   
 aside	
   background: #f2f2f2
@@ -99,17 +101,21 @@ aside
     font-size: 17px
     line-height: 24px
 	
+    a
+      color: #1a1a1a !important
+	
   .toctree-l2
+    display: none
     font-size: 15px
     line-height: 23px
+	
+  .toctree-l1.current .toctree-l2
+    display: list-item
 	
   .toctree-l3
     font-size: 13px
     line-height: 22px
-	
-  .toctree-l1 a
-    color: #1a1a1a !important
-	
+
   a:hover
     background: #e5e5e5 !important
     border-radius: 2px
@@ -118,6 +124,8 @@ aside
   a:focus
     outline: none !important
     text-decoration: none !important
+
+/* Footer */
 	
 footer
   padding-top: 1.5em
@@ -128,14 +136,14 @@ footer
 
   p
     font-size: 90%
-    
+ 
+/* Misc */
+ 
 i.fa 
   vertical-align: 4%
 
- 
 .btn 
   box-shadow: 0px 1px 4px 0px rgba(50,50,50,0.5)
-
 
 .row 
   margin-left: 0 !important
