Overhaul the theme completely
- Make the toc static
- Improve directory structure
- Remove unused buttons from navbar
- Move the js files from a cdn to a local folder

--- a/monospark_sphinx_theme/static/css/style.css
+++ b/monospark_sphinx_theme/static/css/style.css
@@ -28,6 +28,12 @@ body {
   background: #e6e6e6 !important;
   margin-top: 89px !important; }
 
+#main-wrapper {
+  padding-left: 0; }
+  @media screen and (max-width: 992px) {
+    #main-wrapper {
+      padding-right: 0; } }
+
 main {
   background: #fff;
   padding-left: 2em;
@@ -48,9 +54,13 @@ main, aside {
   main p, aside p {
     color: #1a1a1a; }
 
-#sidebar-wrapper {
+#aside-wrapper {
   padding-left: 0 !important;
   padding-right: 0 !important; }
+
+@media screen and (min-width: 992px) {
+  aside {
+    position: absolute; } }
 
 /* Table of contents */
 aside {
@@ -69,10 +79,9 @@ aside {
     box-shadow: 0px 3px 6px 0px rgba(50, 50, 50, 0.35);
     margin: 0px 15px 25px !important; }
   aside ul {
-    margin: 0;
-    padding: 0;
     list-style: none !important;
-    padding-left: 15px; }
+    padding-left: 10px;
+    padding-right: 10px; }
   aside ul > li.toctree-l1 {
     padding-bottom: 0.5em; }
   aside li.current > a {
