--- a/sass/style.sass
+++ b/sass/style.sass
@@ -56,7 +56,7 @@ main
   
 main, aside
   overflow: hidden
-  margin-bottom: 1.2em
+  margin-bottom: 15px
   border-radius: 2px
 
   h1
@@ -74,6 +74,7 @@ main, aside
 aside
   @media screen and (min-width: $break-medium)
     position: absolute
+    overflow-y: scroll
 
 /* Table of contents */  
   
