Display the toc scrollbar only if needed

--- a/monospark_sphinx_theme/static/css/style.css
+++ b/monospark_sphinx_theme/static/css/style.css
@@ -61,7 +61,7 @@ main, aside {
 @media screen and (min-width: 992px) {
   aside {
     position: absolute;
-    overflow-y: scroll; } }
+    overflow-y: auto; } }
 
 /* Table of contents */
 aside {
