--- a/sass/style.sass
+++ b/sass/style.sass
@@ -74,7 +74,7 @@ main, aside
 aside
   @media screen and (min-width: $break-medium)
     position: absolute
-    overflow-y: scroll
+    overflow-y: auto
 
 /* Table of contents */  
   
