Make the toc only as big as needed

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -67,18 +67,17 @@ main, aside
   p 
     color: #1a1a1a
 
+/* Table of contents */ 
+
 #aside-wrapper
   padding-left: 0 !important
-  padding-right: 0 !important
-    
+  padding-right: 0 !important 
+  
 aside
   @media screen and (min-width: $break-medium)
     position: absolute
     overflow-y: auto
 
-/* Table of contents */  
-  
-aside
   background: #f2f2f2
   padding-left: 0
   padding-right: 0
@@ -135,7 +134,10 @@ aside
   a:focus
     outline: none !important
     text-decoration: none !important
-
+ 
+#inner-aside-wrapper
+  overflow: hidden
+    
 /* Footer */
 	
 footer
