--- a/monospark_sphinx_theme/static/css/style.css
+++ b/monospark_sphinx_theme/static/css/style.css
@@ -54,16 +54,11 @@ main, aside {
   main p, aside p {
     color: #1a1a1a; }
 
+/* Table of contents */
 #aside-wrapper {
   padding-left: 0 !important;
   padding-right: 0 !important; }
 
-@media screen and (min-width: 992px) {
-  aside {
-    position: absolute;
-    overflow-y: auto; } }
-
-/* Table of contents */
 aside {
   background: #f2f2f2;
   padding-left: 0;
@@ -72,6 +67,10 @@ aside {
   margin-left: 0;
   margin-right: 0 !important;
   box-shadow: 0px 3px 5px -2px rgba(50, 50, 50, 0.5); }
+  @media screen and (min-width: 992px) {
+    aside {
+      position: absolute;
+      overflow-y: auto; } }
   aside h3 {
     color: #3366cc !important;
     text-align: center; }
@@ -108,6 +107,9 @@ aside {
   aside a:focus {
     outline: none !important;
     text-decoration: none !important; }
+
+#inner-aside-wrapper {
+  overflow: hidden; }
 
 /* Footer */
 footer {
