Apply the table style only on real tables

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -58,7 +58,7 @@ main
     border-color: #3366cc !important
     box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.35)
     
-  table
+  table:not(.field-list):not(.option-list)
     @extend .table, .table-bordered, .table-hover, .table-condensed
 
   
