--- a/monospark_sphinx_theme/static/css/style.css
+++ b/monospark_sphinx_theme/static/css/style.css
@@ -5689,6 +5689,7 @@ main, aside {
   padding-right: 0 !important; }
 
 aside {
+  width: 100%;
   background: #f2f2f2;
   padding-left: 0;
   padding-right: 0;
