Indent definition lists properly

--- a/monospark_sphinx_theme/static/css/style.css
+++ b/monospark_sphinx_theme/static/css/style.css
@@ -5666,6 +5666,9 @@ main {
   padding-left: 2em;
   padding-right: 2em;
   box-shadow: 0px 3px 6px 0px rgba(50, 50, 50, 0.5); }
+  main dd {
+    margin-left: 42px;
+    margin-bottom: 12px; }
   main hr {
     margin-top: 12px !important;
     margin-bottom: 30px !important;
