--- a/sass/style.sass
+++ b/sass/style.sass
@@ -52,6 +52,10 @@ main
   padding-right: 2em
   box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.5)
   
+  dd
+    margin-left: 42px
+    margin-bottom: 12px
+  
   hr
     margin-top: 12px !important
     margin-bottom: 30px !important
