--- a/sass/style.sass
+++ b/sass/style.sass
@@ -52,6 +52,20 @@ main
   padding-right: 2em
   box-shadow: 0px 3px 6px 0px rgba(50,50,50,0.5)
   
+  h1
+    font-size: 31px
+    color: #3366cc !important
+    text-align: center
+  
+  h2
+    font-size: 25px
+    
+  h3
+    font-size: 21px
+    
+  h4
+    font-size: 17px
+  
   dd
     margin-left: 42px
     margin-bottom: 12px
@@ -70,11 +84,6 @@ main, aside
   overflow: hidden
   margin-bottom: 15px
   border-radius: 2px
-
-  h1
-    color: #3366cc !important
-    font-size: 34px !important
-    text-align: center
 
   p 
     color: #1a1a1a
