--- a/sass/style.sass
+++ b/sass/style.sass
@@ -159,6 +159,12 @@ aside
  
 #inner-aside-wrapper
   overflow: hidden
+  
+  > ul
+    margin-bottom: 0
+  
+  > ul:last-child
+    margin-bottom: 10px
     
 /* Footer */
 	
